==> 2yaty/Tiva-c-led-control-FWD/MCAL/GPIO/GPIO.c <==

#include "GPIO.h"
#include "../../LIBRARIES/tm4c123gh6pm.h"
#include "../../LIBRARIES/BIT_MATH.h"

GPIO_ERROR_EN GPIO_pin_init(GPIO_PIN_ST* PIN){


    if (PIN->pin > 7 )
    {
        return WRONG_PIN;
    }
    else if (PIN->port == PORTE && PIN->pin > 6)
    {
        return WRONG_PIN;
    }
    else if (PIN->port == PORTF && PIN->pin > 5)
    {
        return WRONG_PIN;
    }
    
    
    
    switch ( PIN->port)
    {
    case PORTA:
        if(PIN->direction){ SET_BIT(GPIO_PORTA_DIR_R, PIN->pin); } 
        else { CLR_BIT(GPIO_PORTA_DIR_R, PIN->pin); }

        if (PIN->alt_func == 0)
        { SET_BIT(GPIO_PORTA_AFSEL_R , PIN->pin); } 

        SET_BIT(GPIO_PORTA_DEN_R , PIN->pin);   

        /**
         * Future Work:
         *      Enabling the option for the analog 
         *      adding a way to choose the alternate function
         */
        
        break;

    case PORTB:
        if(PIN->direction){ SET_BIT(GPIO_PORTB_DIR_R, PIN->pin); } 
        else { CLR_BIT(GPIO_PORTB_DIR_R, PIN->pin); }

        if (PIN->alt_func == 0)
        { SET_BIT(GPIO_PORTB_AFSEL_R , PIN->pin); } 

        SET_BIT(GPIO_PORTB_DEN_R , PIN->pin);   
        break;

    case PORTC:
        if(PIN->direction){ SET_BIT(GPIO_PORTC_DIR_R, PIN->pin); } 
        else { CLR_BIT(GPIO_PORTC_DIR_R, PIN->pin); }

        if (PIN->alt_func == 0)
        { SET_BIT(GPIO_PORTC_AFSEL_R , PIN->pin); } 

        SET_BIT(GPIO_PORTC_DEN_R , PIN->pin); 
        break;

    case PORTD:
        if(PIN->direction){ SET_BIT(GPIO_PORTD_DIR_R, PIN->pin); } 
        else { CLR_BIT(GPIO_PORTD_DIR_R, PIN->pin); }

        if (PIN->alt_func == 0)
        { SET_BIT(GPIO_PORTD_AFSEL_R , PIN->pin); } 

        SET_BIT(GPIO_PORTD_DEN_R , PIN->pin); 
        break;

    case PORTE:
        if(PIN->direction){ SET_BIT(GPIO_PORTE_DIR_R, PIN->pin); } 
        else { CLR_BIT(GPIO_PORTE_DIR_R, PIN->pin); }

        if (PIN->alt_func == 0)
        { SET_BIT(GPIO_PORTE_AFSEL_R , PIN->pin); } 

        SET_BIT(GPIO_PORTE_DEN_R , PIN->pin); 
        break;
    

    case PORTF:
        if(PIN->direction){ SET_BIT(GPIO_PORTF_DIR_R, PIN->pin); } 
        else { CLR_BIT(GPIO_PORTF_DIR_R, PIN->pin); }

        if (PIN->alt_func == 0)
        { SET_BIT(GPIO_PORTF_AFSEL_R , PIN->pin); } 

        SET_BIT(GPIO_PORTF_DEN_R , PIN->pin); 
        break;

    default:
        return WRONG_PORT;
    }

    return GPIO_OK;
    
    
}
GPIO_ERROR_EN GPIO_port_init( u8 port){

    if (port > 5  )
    {
        return WRONG_PORT;
    }
    
    SET_BIT(SYSCTL_RCGCGPIO_R , port);

			return GPIO_OK;
}

GPIO_ERROR_EN GPIO_pin_write(GPIO_PIN_ST* PIN , u8 value){

    switch (PIN->port)
    {
    case PORTA:
        if(value > 0) SET_BIT(GPIO_PORTA_DATA_R , PIN->pin); else CLR_BIT(GPIO_PORTA_DATA_R , PIN->pin);
        break;

    case PORTB:
        if(value > 0) SET_BIT(GPIO_PORTB_DATA_R , PIN->pin); else CLR_BIT(GPIO_PORTB_DATA_R , PIN->pin);
        break;
    
    case PORTC:
        if(value > 0) SET_BIT(GPIO_PORTC_DATA_R , PIN->pin); else CLR_BIT(GPIO_PORTC_DATA_R , PIN->pin);
        break;

    case PORTD:
        if(value > 0) SET_BIT(GPIO_PORTD_DATA_R , PIN->pin); else CLR_BIT(GPIO_PORTD_DATA_R , PIN->pin);
        break;

    case PORTE:
        if(value > 0) SET_BIT(GPIO_PORTE_DATA_R , PIN->pin); else CLR_BIT(GPIO_PORTE_DATA_R , PIN->pin);
        break;

    case PORTF:
        if(value > 0) SET_BIT(GPIO_PORTF_DATA_R , PIN->pin); else CLR_BIT(GPIO_PORTF_DATA_R , PIN->pin);
        break;

    default:
        return WRONG_PORT;
        
    }

    return GPIO_OK;

}
GPIO_ERROR_EN GPIO_pin_toggle(GPIO_PIN_ST* PIN){

    switch (PIN->port)
    {
    case PORTA:
        TOG_BIT(GPIO_PORTA_DATA_R , PIN->pin );
        break;
    
    case PORTB:
        TOG_BIT(GPIO_PORTB_DATA_R , PIN->pin );
        break;

    case PORTC:
        TOG_BIT(GPIO_PORTC_DATA_R , PIN->pin );
        break;

    case PORTD:
        TOG_BIT(GPIO_PORTD_DATA_R , PIN->pin );
        break;

    case PORTE:
        TOG_BIT(GPIO_PORTE_DATA_R , PIN->pin );
        break;

    case PORTF:
        TOG_BIT(GPIO_PORTF_DATA_R , PIN->pin );
        break;

    default:
        return WRONG_PORT;
      
    }

    return GPIO_OK;
}
GPIO_ERROR_EN GPIO_pin_read(GPIO_PIN_ST* PIN , u8* result){

    switch (PIN->port)
    {
    case PORTA:
        *result = GET_BIT(GPIO_PORTA_DATA_R , PIN->pin);
        break;
    
    case PORTB:
        *result = GET_BIT(GPIO_PORTB_DATA_R , PIN->pin);
        break;

    case PORTC:
        *result = GET_BIT(GPIO_PORTC_DATA_R , PIN->pin);
        break;

    case PORTD:
        *result = GET_BIT(GPIO_PORTD_DATA_R , PIN->pin);
        break;

    case PORTE:
        *result = GET_BIT(GPIO_PORTE_DATA_R , PIN->pin);
        break;

    case PORTF:
        *result = GET_BIT(GPIO_PORTF_DATA_R , PIN->pin);
        break;

    default:
        return WRONG_PORT;
       
    }

    return GPIO_OK;
}


GPIO_ERROR_EN GPIO_pin_EN_interrupt(GPIO_PIN_ST* PIN , u8 edge , u8 singlEdge , u8 lowlevel){

    switch (PIN->port)
    {
    case PORTA:
        if (edge )    SET_BIT(GPIO_PORTA_IS_R , PIN->pin);     else CLR_BIT(GPIO_PORTA_IS_R , PIN->pin);
        if(singlEdge) SET_BIT(GPIO_PORTA_IBE_R , PIN->pin); else    CLR_BIT(GPIO_PORTA_IBE_R , PIN->pin);
        if(lowlevel)  SET_BIT(GPIO_PORTA_IEV_R , PIN->pin); else    CLR_BIT(GPIO_PORTA_IEV_R , PIN->pin); 
                      CLR_BIT(GPIO_PORTA_ICR_R , PIN->pin);
                      SET_BIT(GPIO_PORTA_IM_R , PIN->pin);  
        break;
    
    case PORTB:
        if (edge )    SET_BIT(GPIO_PORTB_IS_R , PIN->pin);     else CLR_BIT(GPIO_PORTB_IS_R , PIN->pin);
        if(singlEdge) SET_BIT(GPIO_PORTB_IBE_R , PIN->pin); else    CLR_BIT(GPIO_PORTB_IBE_R , PIN->pin);
        if(lowlevel)  SET_BIT(GPIO_PORTB_IEV_R , PIN->pin); else    CLR_BIT(GPIO_PORTB_IEV_R , PIN->pin); 
                      CLR_BIT(GPIO_PORTB_ICR_R , PIN->pin);
                      SET_BIT(GPIO_PORTB_IM_R , PIN->pin);  
        break;

    case PORTC:
        if (edge )    SET_BIT(GPIO_PORTC_IS_R , PIN->pin);     else CLR_BIT(GPIO_PORTC_IS_R , PIN->pin);
        if(singlEdge) SET_BIT(GPIO_PORTC_IBE_R , PIN->pin); else    CLR_BIT(GPIO_PORTC_IBE_R , PIN->pin);
        if(lowlevel)  SET_BIT(GPIO_PORTC_IEV_R , PIN->pin); else    CLR_BIT(GPIO_PORTC_IEV_R , PIN->pin); 
                      CLR_BIT(GPIO_PORTC_ICR_R , PIN->pin);
                      SET_BIT(GPIO_PORTC_IM_R , PIN->pin);  
        break;

    case PORTD:
        if (edge )    SET_BIT(GPIO_PORTD_IS_R , PIN->pin);     else CLR_BIT(GPIO_PORTD_IS_R , PIN->pin);
        if(singlEdge) SET_BIT(GPIO_PORTD_IBE_R , PIN->pin); else    CLR_BIT(GPIO_PORTD_IBE_R , PIN->pin);
        if(lowlevel)  SET_BIT(GPIO_PORTD_IEV_R , PIN->pin); else    CLR_BIT(GPIO_PORTD_IEV_R , PIN->pin); 
                      CLR_BIT(GPIO_PORTD_ICR_R , PIN->pin);
                      SET_BIT(GPIO_PORTD_IM_R , PIN->pin);  
        break;

    case PORTE:
        if (edge )    SET_BIT(GPIO_PORTE_IS_R , PIN->pin);     else CLR_BIT(GPIO_PORTE_IS_R , PIN->pin);
        if(singlEdge) SET_BIT(GPIO_PORTE_IBE_R , PIN->pin); else    CLR_BIT(GPIO_PORTE_IBE_R , PIN->pin);
        if(lowlevel)  SET_BIT(GPIO_PORTE_IEV_R , PIN->pin); else    CLR_BIT(GPIO_PORTE_IEV_R , PIN->pin); 
                      CLR_BIT(GPIO_PORTE_ICR_R , PIN->pin);
                      SET_BIT(GPIO_PORTE_IM_R , PIN->pin);  
        break;

    case PORTF:
        if (edge )    SET_BIT(GPIO_PORTF_IS_R , PIN->pin);     else CLR_BIT(GPIO_PORTF_IS_R , PIN->pin);
        if(singlEdge) SET_BIT(GPIO_PORTF_IBE_R , PIN->pin); else    CLR_BIT(GPIO_PORTF_IBE_R , PIN->pin);
        if(lowlevel)  SET_BIT(GPIO_PORTF_IEV_R , PIN->pin); else    CLR_BIT(GPIO_PORTF_IEV_R , PIN->pin); 
                      CLR_BIT(GPIO_PORTF_ICR_R , PIN->pin);
                      SET_BIT(GPIO_PORTF_IM_R , PIN->pin);  
        break;

    default:
        return WRONG_PORT;
       
    }
}


char GPIO_get_interrupt_St(GPIO_PIN_ST* PIN){
	
	switch (PIN->port)
    {
    case PORTA:
        return GET_BIT(GPIO_PORTA_RIS_R , PIN->pin);
        
    
    case PORTB:
        return  GET_BIT(GPIO_PORTB_RIS_R , PIN->pin);
      

    case PORTC:
        return GET_BIT(GPIO_PORTC_RIS_R , PIN->pin);
        

    case PORTD:
         return GET_BIT(GPIO_PORTD_RIS_R , PIN->pin);
        

    case PORTE:
        return GET_BIT(GPIO_PORTE_RIS_R , PIN->pin);
       

    case PORTF:
        return GET_BIT(GPIO_PORTF_RIS_R , PIN->pin);
        

    default:
        return WRONG_PORT;
       
    }

    return GPIO_OK;
}
GPIO_ERROR_EN GPIO_clr_interrupt_St(GPIO_PIN_ST* PIN){

	switch (PIN->port)
    {
    case PORTA:
        SET_BIT(GPIO_PORTA_ICR_R , PIN->pin);
        break;
    
    case PORTB:
        SET_BIT(GPIO_PORTB_ICR_R , PIN->pin);
        break;

    case PORTC:
        SET_BIT(GPIO_PORTC_ICR_R , PIN->pin);
        break;

    case PORTD:
        SET_BIT(GPIO_PORTD_ICR_R , PIN->pin);
        break;

    case PORTE:
        SET_BIT(GPIO_PORTE_ICR_R , PIN->pin);
        break;

    case PORTF:
        SET_BIT(GPIO_PORTF_ICR_R , PIN->pin);
        break;

    default:
        return WRONG_PORT;
       
    }

    return GPIO_OK;
}
